main page, router

--- a/src/assets/less/components/mobile-header.less
+++ b/src/assets/less/components/mobile-header.less
@@ -1,6 +1,6 @@
 // main: ../style.less
 .mobile-header {
-  display: grid;
+  display: none;
   justify-content: center;
   align-items: center;
   margin-bottom: 100px;
