--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -16,10 +16,11 @@
 html,
 body {
   background-color: @darkMediumGray;
+  .Montserrat();
+  font-size: 14px;
 }
 
 body {
-  .Montserrat();
   padding-top: 139px;
 }
 
