--- a/src/assets/less/components/banner.less
+++ b/src/assets/less/components/banner.less
@@ -1,4 +1,4 @@
-// main: main.less
+// main: ../style.less
 .banner {
   position: relative;
   overflow: hidden;
@@ -7,13 +7,72 @@
   background-color: @darkHighGray;
   box-shadow: 0 25px 40px rgba(0, 0, 0, .06);
   border-radius: 32px;
+  margin-top: 139px;
+
+  &.post-cover {
+    z-index: 1;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+
+    .banner-container {
+      height: 100%;
+      display: grid;
+      grid-template-columns: 300px 1fr;
+      align-items: center;
+      padding: 20px 100px;
+      column-gap: 25px;
+
+      .post-cover-image {
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
+        border-radius: 25px;
+        box-shadow: 0 5px 17px 4px rgba(@black, .2);
+      }
+
+      .post-cover-inner {
+        .post-cover-content {
+          width: 540px;
+          color: @white;
+
+          .post-title {
+            font-size: 34px;
+            font-weight: 100;
+            line-height: 44px;
+            margin-bottom: 10px;
+            text-shadow: 0 2px 7px rgba(0, 0, 0, .5);
+          }
+
+          .post-author {
+            font-size: 14px;
+            font-weight: 600;
+            line-height: 14px;
+            margin-bottom: 10px;
+            opacity: .6;
+            text-shadow: 0 2px 7px rgba(0, 0, 0, .3);
+          }
+
+          &.is-light {
+            color: @darkMediumGray;
+
+            .post-title {
+              text-shadow: 0 2px 7px rgba(255, 255, 255, .3);
+            }
+
+            .post-author {
+              text-shadow: 0 2px 7px rgba(255, 255, 255, .1);
+            }
+          }
+        }
+      }
+    }
+  }
 
   .bg-image {
     position: absolute;
     width: 100%;
     height: 100%;
     //border-radius: 32px;
-
     object-fit: cover;
   }
 
@@ -22,8 +81,11 @@
     width: 100%;
     height: 100%;
     background-color: rgba(@darkHighGray, .6);
-    border-radius: 32px;
 
     backdrop-filter: blur(10px);
+  }
+
+  &-container {
+    position: relative;
   }
 }
