--- a/src/assets/less/components/button.less
+++ b/src/assets/less/components/button.less
@@ -9,4 +9,14 @@ button,
   border-radius: 16px;
   outline: none;
   cursor: pointer;
+
+  &.secondary {
+    background: none;
+    background-color: @white;
+    color: @darkHighGray;
+
+    .icon {
+      color: @darkHighGray;
+    }
+  }
 }
