--- a/src/assets/less/components/colors.less
+++ b/src/assets/less/components/colors.less
@@ -1,7 +1,9 @@
 // main: ../style.less
 
 @darkMediumGray: #171717;
-@darkHighGray  : #0d0d0d;
-@white         : #fff;
-@lightGray     : #979797;
+@darkHighGray : #0d0d0d;
+@white : #fff;
+@black : #000;
+@lightMediumGray : #505050;
+@lightGray : #979797;
 @bluePurpleGradient: linear-gradient(270deg, #8743ff 0%, #4136f1 100%);
