--- a/src/assets/less/components/icons.less
+++ b/src/assets/less/components/icons.less
@@ -16,7 +16,14 @@
   text-decoration: none;
   vertical-align: middle;
 
-
+  &::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-left: 2px;
+  }
 
 
   &.x2 {
