--- a/src/assets/less/components/main.less
+++ b/src/assets/less/components/main.less
@@ -1,12 +1,23 @@
 // main: ../style.less
 main {
-  @import "banner.less";
+
   max-width: 1440px;
   margin: 0 auto;
+  width: 100%;
 
   .section {
     position: relative;
     padding: 50px 0;
+
+    &.page-content {
+      background-color: @darkHighGray;
+      border-radius: 24px;
+      margin: 20px 0;
+      margin-top: -48px;
+      padding: 50px 20px;
+      padding-top: 78px;
+      color: @white;
+    }
 
     .scroll-buttons {
       position: absolute;
@@ -32,11 +43,15 @@ main {
         left: -20px;
 
         .icon {
-          margin-left: 20px;
+          margin-left: 17px;
         }
 
         &:hover {
           left: -23px;
+
+          .icon {
+            margin-left: 19px;
+          }
         }
       }
 
@@ -49,6 +64,10 @@ main {
 
         &:hover {
           right: -23px;
+
+          .icon {
+            margin-right: 22px;
+          }
         }
       }
     }
@@ -57,17 +76,41 @@ main {
       width: 100%;
       margin-bottom: 20px;
       color: @white;
+      display: grid;
+      grid-template-columns: 1fr auto;
+      align-items: center;
 
       .title {
         font-size: 23px;
         font-weight: 900;
-        text-align: center;
+        text-align: left;
         text-transform: uppercase;
+      }
+
+      .read-more {
+        width: 38px;
+        height: 38px;
+        padding: 0;
+        border-radius: 76px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: all linear .2s;
+        box-shadow: 0px 4px 7px 0 rgba(@white, .1);
+
+        .icon {
+          opacity: .8;
+        }
+
+        &:hover {
+          transform: translateX(4px);
+        }
       }
     }
 
     .section-list {
       @import "item.less";
+      @import "skeleton/item-skeleton.less";
       height: 190px;
       white-space: nowrap;
     }
