--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -11,6 +11,7 @@
 @import "components/mobile-header.less";
 @import "components/main.less";
 @import "components/footer.less";
+@import "components/banner.less";
 
 
 html,
@@ -21,7 +22,12 @@ body {
 }
 
 body {
-  padding-top: 139px;
+  //padding-top: 139px;
+
+  .root {
+    display: grid;
+    grid-template-rows: auto 1fr auto auto;
+  }
 }
 
 .simplebar-content-wrapper {
